nicknamer/server/tests/snapshots/names_endpoints_tests__api__v1__can_get_names_as_json_when_names_exist.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
status: 200
headers:
  content-type: application/json
body:
  count: 2
  names:
    - discord_id: 123456789
      id: 1
      name: TestUser1
    - discord_id: 987654321
      id: 2
      name: TestUser2
test_name: api_v1_names_with_data
